--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,22 @@ version: "3.8"
 
 services:
   db:
-    image: postgres:16
+    image: verbetskyi/notes-db:latest
+    container_name: notes_db
     restart: always
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "${DB_PORT}:${DB_PORT}"
+      - "${DB_PORT}:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
 
   app:
-    build: .
-    command: ["npm", "dev"]
+    image: verbetskyi/notes-app:latest
+    container_name: notes_app
+    command: ["npm", "run", "dev"]
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
