--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -2,10 +2,13 @@ FROM node:20
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY ../package*.json ./
+
 RUN npm install
 
 COPY . .
 
+RUN npx tsc
+
 EXPOSE 3000
-CMD ["npm", "dev"]
+CMD ["node", "dist/server.js"]
