--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Dold",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
+    "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.31.4",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "dotenv": "^17.2.1",
