--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ version: "3.8"
 
 services:
   db:
-    image: verbetskyi/notes-db:latest
+    image: postgres:16
     container_name: notes_db
-    restart: always
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -17,15 +16,17 @@ services:
   app:
     image: verbetskyi/notes-app:latest
     container_name: notes_app
-    command: ["npm", "run", "dev"]
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    working_dir: /usr/src/app
     ports:
-      - "3000:3000"
+      - "${PORT}:8000"
     depends_on:
       - db
+    environment:
+      NODE_ENV: production
+      DB_HOST: db
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
 
 volumes:
   pgdata:
